src/test/deca/context/valid/declar-instance-objet.deca
// Description:
//    simple declare un objet d'une classe
//
// Resultats:
//    
//
// Historique:
//    cree le 16/01/2023

{
    Object o = new Object();
    o.equals(o);
}